--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -1948,16 +1948,11 @@ label {
   -webkit-border-radius: 0.25rem;
   -moz-border-radius: 0.25rem;
 }
-.z-slider .z-range_progress {
-  width: 75%;
-  height: 0.25rem;
-  background-color: #EEEEEE;
-}
 .z-slider > input[type=range] {
   -webkit-appearance: none;
   appearance: none;
   height: 0.25rem;
-  background-color: #EBEBEB;
+  background-color: #EEEEEE;
   outline: 0;
 }
 .z-slider > input[type=range]::-webkit-slider-thumb {
@@ -2015,6 +2010,10 @@ label {
 .z-slider > input[type=range]::-moz-range-thumb:active {
   border-color: #339AF0;
   background-color: #ADE6FD;
+}
+.z-slider > input[type=range]::-moz-range-thumb:disabled {
+  border-color: #CFD5D9;
+  background-color: #EEEEEE;
 }
 
 select {
