--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1931,19 +1931,22 @@ label {
 }
 
 .z-slider .z-range {
+  --range-fill-color: #339AF0;
+  --range-location: 100%;
+  -webkit-appearance: none;
+  appearance: none;
   height: 0.375rem;
   border-radius: 0.25rem;
   -webkit-border-radius: 0.25rem;
   -moz-border-radius: 0.25rem;
-}
-.z-slider > input[type=range] {
-  -webkit-appearance: none;
-  appearance: none;
-  height: 0.25rem;
-  background-color: #EEEEEE;
+  background: linear-gradient(to right, var(--range-fill-color) 0%, var(--range-fill-color) var(--range-location), #EEEEEE var(--range-location), #EEEEEE 100%);
   outline: 0;
 }
-.z-slider > input[type=range]::-webkit-slider-thumb {
+.z-slider .z-range:disabled {
+  --range-fill-color: #CFD5D9;
+  background: linear-gradient(to right, var(--range-fill-color) 0%, var(--range-fill-color) var(--range-location), #EEEEEE var(--range-location), #EEEEEE 100%);
+}
+.z-slider .z-range::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 1.125rem;
@@ -1956,25 +1959,25 @@ label {
   -moz-box-shadow: 0 0 0.125rem 0 #8B9094;
   box-shadow: 0 0 0.125rem 0 #8B9094;
 }
-.z-slider > input[type=range]::-webkit-slider-thumb:hover {
+.z-slider .z-range::-webkit-slider-thumb:not(:disabled):hover {
   border-color: #64BBF6;
   background-color: #E3F5FC;
 }
-.z-slider > input[type=range]::-webkit-slider-thumb:focus {
+.z-slider .z-range::-webkit-slider-thumb:not(:disabled):focus {
   border-color: #2578CE;
   -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
   box-shadow: 0 0 0.125rem 0 #2578CE;
 }
-.z-slider > input[type=range]::-webkit-slider-thumb:active {
+.z-slider .z-range::-webkit-slider-thumb:not(:disabled):active {
   border-color: #339AF0;
   background-color: #ADE6FD;
 }
-.z-slider > input[type=range]::-webkit-slider-thumb:disabled {
+.z-slider .z-range::-webkit-slider-thumb:disabled {
   border-color: #CFD5D9;
   background-color: #EEEEEE;
 }
-.z-slider > input[type=range]::-moz-range-thumb {
+.z-slider .z-range::-moz-range-thumb {
   width: 1.125rem;
   height: 1.125rem;
   border: 0.0625rem solid #CFD5D9;
@@ -1985,21 +1988,21 @@ label {
   -moz-box-shadow: 0 0 0.125rem 0 #8B9094;
   box-shadow: 0 0 0.125rem 0 #8B9094;
 }
-.z-slider > input[type=range]::-moz-range-thumb:hover {
+.z-slider .z-range::-moz-range-thumb:hover {
   border-color: #64BBF6;
   background-color: #E3F5FC;
 }
-.z-slider > input[type=range]::-moz-range-thumb:focus {
+.z-slider .z-range::-moz-range-thumb:focus {
   border-color: #2578CE;
   -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
   box-shadow: 0 0 0.125rem 0 #2578CE;
 }
-.z-slider > input[type=range]::-moz-range-thumb:active {
+.z-slider .z-range::-moz-range-thumb:active {
   border-color: #339AF0;
   background-color: #ADE6FD;
 }
-.z-slider > input[type=range]::-moz-range-thumb:disabled {
+.z-slider .z-range::-moz-range-thumb:disabled {
   border-color: #CFD5D9;
   background-color: #EEEEEE;
 }
